# rust-axum-task

./: .env.example  .gitignore  AI_USAGE.md  Cargo.toml  README.md  agent_history.json  test_flow.ps1
migrations/: 20260617000000_init.sql
src/: cache.rs  lib.rs  main.rs  models.rs
src/handlers/: auth.rs  mod.rs  seed.rs  tasks.rs
src/middleware/: auth.rs
tests/: models_test.rs
